# rusty_hangul

./: .gitignore  .npmignore  Cargo.toml  README.en.md  README.md  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rustfmt.toml
.github/workflows/: CI.yml  Release-Deploy.yml  release.yml
benchmark/: Cargo.toml  package.json  vitest.config.js
benchmark/benches/: hangul_benchmark.rs
benchmark/src/: disassemble.bench.ts  main.rs
core/: Cargo.toml
core/src/: choseong.rs  decompose.rs  hangul.rs  hangul_char.rs  hangul_letter.rs  hangul_sentence.rs  jongseong.rs  jungseong.rs  lib.rs  nfc.rs  nfd.rs  utils.rs
examples/browser-basic/: package.json  vite.config.ts
examples/browser-basic/src/: App.css  App.tsx
node/: Cargo.toml  biome.json  browser.js  index.d.ts  index.js  justfile  package.json
node/src/: lib.rs
node/tests/: Hangul.spec.ts  hangul_disassemble.spec.ts  hangul_get_choseong.spec.ts
wasm/: Cargo.toml  package.json
wasm/examples/: index.html  index.js
wasm/src/: lib.rs
