[package]
name = "hangul-wasm"
version = "0.1.0"
edition = "2021"
description = "WebAssembly bindings for hangul library"
authors = ["ghlee"]
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
hangul = { path = "../core" }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O3", "--enable-mutable-globals"]
